--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
     <div id="footer">
       © Copyright 2021 Gaming with Arpan and Ayan - All Rights Reserved
     </div>
+    
+    <script src="./script.js"></script>
 
 </body>
 </html>
