--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
       © Copyright 2021 Gaming with Arpan and Ayan - All Rights Reserved
     </div>
     
-    <script type="text/javascript">window.$crisp=[];window.CRISP_WEBSITE_ID="9b027315-daf8-4aa1-866c-e93a65ff8e86";(function(){d=document;s=d.createElement("script");s.src="https://client.crisp.chat/l.js";s.async=1;d.getElementsByTagName("head")[0].appendChild(s);})();</script>
-
+    <script src="script.js"></script>
 </body>
 </html>
