--- a/index2.html
+++ b/index2.html
@@ -43,12 +43,12 @@
             <tr class="style1">
               <td>Protection</td>
               <td>Reduces the damage</td>
-              <td>helmet,chestplate,leggings,boots</td>
+              <td>helmet, chestplate, leggings, boots</td>
             </tr>
             <tr>
               <td>Fire Protection</td>
               <td>Reduces the fire damage</td>
-              <td>helmet,chestplate,leggings,boots</td>
+              <td>helmet, chestplate, leggings, boots</td>
               </tr>
             <tr class="style1">
               <td>Feather Falling</td>
@@ -58,22 +58,22 @@
             <tr>
               <td>Blast Protection</td>
               <td>Reduces the explosion damage</td>
-              <td>helmet,chestplate,leggings,boots</td>
+              <td>helmet, chestplate, leggings, boots</td>
             </tr>
             <tr class="style1">
               <td>Projectile Protection</td>
               <td>Reduces projectile damage</td>
-              <td>helmet,chestplate,leggings,boots</td>
+              <td>helmet, chestplate, leggings, boots</td>
             </tr>
             <tr>
               <td>Unbreaking</td>
               <td>Increases the durability</td>
-              <td>helmet,chestplate,leggings,boots,elytra,sheild</td>
+              <td>helmet, chestplate, leggings, boots, elytra, sheild</td>
              </tr>
             <tr class="style1">
               <td>Mending</td>
               <td>xp mends the equipment</td>
-              <td>helmet,chestplate,leggings,boots,elytra,sheild</td>
+              <td>helmet, chestplate, leggings, boots, elytra, sheild</td>
             </tr>
             <tr>
               <td>Aqua Affinity</td>
@@ -93,7 +93,7 @@
             <tr class="style1">
               <td>Thorns</td>
               <td>Damages the attacker</td>
-              <td>helmet,chestplate,leggings,boots</td>
+              <td>helmet, chestplate, leggings, boots</td>
             </tr>
             <tr>
               <td>Frost Walker</td>
@@ -108,17 +108,17 @@
             <tr>
               <td>Curse of Vanishing</td>
               <td>Cursed item vanishes after you die</td>
-              <td>helmet,chestplate,leggings,boots,elytra,sheild</td>
+              <td>helmet, chestplate, leggings, boots, elytra, sheild</td>
             </tr>
             <tr class="style1">
               <td>Curse of Binding</td>
               <td>Cursed item binds itself with you</td>
-              <td>helmet,chestplate,leggings,boots,elytra</td>
+              <td>helmet, chestplate, leggings, boots, elytra,</td>
             </tr>
           </table>
         </p>
         <p>
-          All enchantment of tools(sword,axe,pickaxe,hoe,shovel,fishing rod) in minecraft are follow:-
+          All enchantment of tools(sword, axe, pickaxe, hoe, shovel, fishing rod) in minecraft are follow:-
           <table border="2" class="table">
             <tr>
               <th>Enchantment</th>
@@ -128,47 +128,47 @@
             <tr class="style1">
               <td>Mending</td>
               <td>xp mends the equipment</td>
-              <td>sword,axe,pickaxe,hoe,shovel,fishing rod</td>
+              <td>sword, axe, pickaxe, hoe, shovel, fishing rod</td>
             </tr>
             <tr>
               <td>Silk Touch</td>
               <td>Mines block themselves(fraglie items)</td>
-              <td>axe,pickaxe,hoe,shovel</td>
+              <td>axe, pickaxe, hoe, shovel</td>
             </tr>
             <tr class="style1">
               <td>Efficiency</td>
               <td>Increases the mining speed</td>
-              <td>axe,pickaxe,hoe,shovel</td>
+              <td>axe, pickaxe, hoe, shovel</td>
             </tr>
             <tr>
               <td>Fortune</td>
               <td>Increases block drop while mining</td>
-              <td>axe,pickaxe,shovel</td>
+              <td>axe, pickaxe, shovel</td>
             </tr>
             <tr class="style1">
               <td>Unbreaking</td>
               <td>Increases the durability</td>
-              <td>sword,axe,pickaxe,hoe,shovel,fishing rod</td>
+              <td>sword, axe, pickaxe, hoe, shovel, fishing rod</td>
             </tr>
             <tr>
               <td>Curse of Vanishing</td>
               <td>Cursed item vanishes after you die</td>
-              <td>sword,axe,pickaxe,hoe,shovel,fishing rod</td>
+              <td>sword, axe, pickaxe, hoe, shovel, fishing rod</td>
             </tr>
             <tr class="style1">
               <td>Sharpness</td>
               <td>Increases attack damage dealt to mobs</td>
-              <td>sword,axe</td>
+              <td>sword, axe</td>
             </tr>
             <tr>
               <td>Smite</td>
               <td>Increases attack damage aganist undead mobs</td>
-              <td>sword,axe</td>
+              <td>sword, axe</td>
             </tr>
             <tr class="style1">
               <td>Bane of Arthopods</td>
               <td>Increases attack damage aganist arthopods</td>
-              <td>sword,axe</td>
+              <td>sword, axe</td>
             </tr>
             <tr>
               <td>Fire Aspect</td>
