--- a/index2.html
+++ b/index2.html
@@ -15,13 +15,13 @@
       <a class="navbar-brand"><img src="Logo.png" id="logo"> <span id="name">Gaming with Arpan and Ayan</span></a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a href="index.html" class="nav-link">Home<span class="sr-only">(current)</span></a>
+          <a href="index" class="nav-link">Home<span class="sr-only">(current)</span></a>
         </li>
           <li class="nav-item">
-            <a href="index2.html" class="nav-link">Minecraft</a>
+            <a href="index2" class="nav-link">Minecraft</a>
         </li>
         <li class="nav-item">
-          <a href="index3.html" class="nav-link">Free Fire</a>
+          <a href="index3" class="nav-link">Free Fire</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="https://www.youtube.com/channel/UCeKmcV5f2w5mi0XfYkqQjzA" target="-">Visit Channel</a>
