--- a/index3.html
+++ b/index3.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
     <link id="favicon" rel="shortcut icon" sizes="180x180" href="Logo.png" type="image/png"/>
-    <title>Gaming with Arpan and Ayan</title>
+    <title>Free Fire | Gaming with Arpan and Ayan</title>
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -17,13 +17,13 @@
         <a class="navbar-brand"><img src="Logo.png" id="logo"> <span id="name">Gaming with Arpan and Ayan</span></a>
         <ul class="nav navbar-nav">
           <li class="nav-item">
-            <a href="index.html" class="nav-link">Home<span class="sr-only">(current)</span></a>
+            <a href="index" class="nav-link">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a href="index2.html" class="nav-link">Minecraft</a>
+            <a href="index2" class="nav-link">Minecraft</a>
           </li>
           <li class="nav-item">
-            <a href="index3.html" class="nav-link">Free Fire</a>
+            <a href="index3" class="nav-link">Free Fire</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://www.youtube.com/channel/UCeKmcV5f2w5mi0XfYkqQjzA" target="-">Visit Channel</a>
