--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <a href="index" class="nav-link">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a href="index2" class="nav-link">Minecraft</a>
+            <a href="Minecraft" class="nav-link">Minecraft</a>
           </li>
           <li class="nav-item">
-            <a href="index3" class="nav-link">Free Fire</a>
+            <a href="Free Fire" class="nav-link">Free Fire</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://www.youtube.com/channel/UCeKmcV5f2w5mi0XfYkqQjzA" target="-">Visit Channel</a>
