--- a/Free Fire.html
+++ b/Free Fire.html
@@ -20,10 +20,10 @@
             <a href="index" class="nav-link">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a href="index2" class="nav-link">Minecraft</a>
+            <a href="Minecraft" class="nav-link">Minecraft</a>
           </li>
           <li class="nav-item">
-            <a href="index3" class="nav-link">Free Fire</a>
+            <a href="Free Fire" class="nav-link">Free Fire</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://www.youtube.com/channel/UCeKmcV5f2w5mi0XfYkqQjzA" target="-">Visit Channel</a>
@@ -32,8 +32,13 @@
     </nav>
 
     <div id="free-fire">
-        <h1 style="text-align: center;">Free Fire</h1>
+      <h1 style="text-align: center;">Free Fire</h1>
 
+    </div>
+
+    <hr>
+    <div id="footer">
+      © Copyright 2021 Gaming with Arpan and Ayan - All Rights Reserved
     </div>
 
     <script src="script.js"></script>
