--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="Minecraft" class="nav-link">Minecraft</a>
           </li>
           <li class="nav-item">
-            <a href="Free Fire" class="nav-link">Free Fire</a>
+            <a href="Free-Fire" class="nav-link">Free Fire</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://www.youtube.com/channel/UCeKmcV5f2w5mi0XfYkqQjzA" target="-">Visit Channel</a>
