--- a/Free-Fire.html
+++ b/Free-Fire.html
@@ -33,6 +33,23 @@
 
     <div id="free-fire">
       <h1 style="text-align: center;">Free Fire</h1>
+      <div class="container">
+        <p>Free Fire is the ultimate survival shooter game available on mobile. Each 10-minute game places you on a remote island where you are pit against 49 other players, all seeking survival. 
+        Players freely choose their starting point with their parachute, and aim to stay in the safe zone for as long as possible. Drive vehicles to explore the vast map, hide in the wild, or 
+        become invisible by proning under grass or rifts. Ambush, snipe, survive, there is only one goal: to survive and answer the call of duty.</p>
+        <p>
+          What's new:-
+          <ol>
+            <li>Clash Squad Season 9 - Begins 09/29 17:00 GMT+8.</li>
+            <li>Airdrop Vending Machine now available in Battle Royale.</li>
+            <li>New Weapon - Treatment Sniper now available in Battle Royale.</li>
+            <li>Weapon Stats adjustments.</li>
+            <li>Character Balancing adjustments.</li>
+            <li>Replay system available for Battle Royale and Clash Squad.</li>
+            <li>Players can now customize the amount of items to drop from bag.</li>
+          </ol>
+        </p>
+      </div>
 
     </div>
 
