--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@
       </div>
     </div>
 
+    <div style="text-align:right;pointer-events: none;"><script type="text/javascript" src="http://services.webestools.com/cpt_pages_views/74374-3-8.js"></script></div>
+
     <hr>
     <div id="footer">
       © Copyright 2021 Gaming with Arpan and Ayan - All Rights Reserved
