--- a/index.html
+++ b/index.html
@@ -68,8 +68,7 @@
       </div>
     </div>
 
-    <div style="text-align:right;pointer-events: none;"><script type="text/javascript">document.write("<a href=\"http://www.webestools.com/pages-views-counter-free-number-pages-views-statistics.html\"><img src=\"http://services.webestools.com/images/s3_0.gif\" class=\"cpt_pv_74374\"  alt=\"0\" style=\"border:0px;\" /><img src=\"http://services.webestools.com/images/s3_0.gif\" class=\"cpt_pv_74374\"  alt=\"0\" style=\"border:0px;\" /><img src=\"http://services.webestools.com/images/s3_0.gif\" class=\"cpt_pv_74374\"  alt=\"0\" style=\"border:0px;\" /><img src=\"http://services.webestools.com/images/s3_0.gif\" class=\"cpt_pv_74374\"  alt=\"0\" style=\"border:0px;\" /><img src=\"http://services.webestools.com/images/s3_0.gif\" class=\"cpt_pv_74374\"  alt=\"0\" style=\"border:0px;\" /><img src=\"http://services.webestools.com/images/s3_0.gif\" class=\"cpt_pv_74374\"  alt=\"0\" style=\"border:0px;\" /><img src=\"http://services.webestools.com/images/s3_0.gif\" class=\"cpt_pv_74374\"  alt=\"0\" style=\"border:0px;\" /><img src=\"http://services.webestools.com/images/s3_2.gif\" class=\"cpt_pv_74374\"  alt=\"2\" style=\"border:0px;\" /></a>");</script></div>
-
+    <div style="text-align:right;"><img src="https://counter10.stat.ovh/private/freecounterstat.php?c=2cn7u6xuntfel32pktjcpeemrntfua8s" border="0" title="free web counter" alt="free web counter"></div>
     <hr>
     <div id="footer">
       © Copyright 2021 Gaming with Arpan and Ayan - All Rights Reserved
