--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
     </div>
 
-    <div style="text-align:right;"><img src="https://hitwebcounter.com/counter/counter.php?page=7878919&style=0009&nbdigits=6&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></div>
+    <div style="text-align:right;"><img src="https://counter10.stat.ovh/private/freecounterstat.php?c=s17us2wqjlg67885rc47x1uwy1ghul5k" border="0" title="website counter" alt="website counter"></div>
     <hr>
     <div id="footer">
       © Copyright 2021 Gaming with Arpan and Ayan - All Rights Reserved
