--- a/Free-Fire.html
+++ b/Free-Fire.html
@@ -17,7 +17,7 @@
         <a class="navbar-brand"><img src="Logo.png" id="logo"> <span id="name">Gaming with Arpan and Ayan</span></a>
         <ul class="nav navbar-nav">
           <li class="nav-item">
-            <a href="index" class="nav-link">Home<span class="sr-only">(current)</span></a>
+            <a href="Home" class="nav-link">Home<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a href="Minecraft" class="nav-link">Minecraft</a>
@@ -37,16 +37,44 @@
         <p>Free Fire is the ultimate survival shooter game available on mobile. Each 10-minute game places you on a remote island where you are pit against 49 other players, all seeking survival. 
         Players freely choose their starting point with their parachute, and aim to stay in the safe zone for as long as possible. Drive vehicles to explore the vast map, hide in the wild, or 
         become invisible by proning under grass or rifts. Ambush, snipe, survive, there is only one goal: to survive and answer the call of duty.</p>
+
+          <p>
+            [<span class="text-style">Survival shooter in its original form</span>]<br>
+            Search for weapons, stay in the play zone, loot your enemies and become the last man standing. Along the way, go for legendary airdrops while avoiding airstrikes to gain that little 
+            edge against other players.
+          </p>
+
+          <p>
+            [<span class="text-style">10 minutes, 50 players, epic survival goodness awaits</span>]<br>
+            Fast and Lite gameplay - Within 10 minutes, a new survivor will emerge. Will you go beyond the call of duty and be the one under the shining lite?
+          </p>
+
+          <p>
+            [<span class="text-style">4-man squad, with in-game voice chat</span>]<br>
+            Create squads of up to 4 players and establish communication with your squad at the very first moment. Answer the call of duty and lead your friends to victory and be the last team 
+            standing at the apex.
+          </p>
+
+          <p>
+            [<span class="text-style">Clash Squad</span>]<br>
+            Fast paced 4v4 game mode is now open 24/7! Manage your economy, purchase weapons, and defeat the enemy squad!
+          </p>
+
+          <p>
+            [<span class="text-style">Realistic and smooth graphics</span>]<br>
+            Easy to use controls and smooth graphics promises the best survival experience you will find on mobile to help you immortalize your name among the legends.
+          </p>
+
         <p>
           What's new:-
-          <ol>
-            <li>Clash Squad Season 9 - Begins 09/29 17:00 GMT+8.</li>
-            <li>Airdrop Vending Machine now available in Battle Royale.</li>
-            <li>New Weapon - Treatment Sniper now available in Battle Royale.</li>
-            <li>Weapon Stats adjustments.</li>
-            <li>Character Balancing adjustments.</li>
-            <li>Replay system available for Battle Royale and Clash Squad.</li>
-            <li>Players can now customize the amount of items to drop from bag.</li>
+          <ol class="list">
+            <li><strong>Squad Season 9 - Begins 09/29 17:00 GMT+8.</strong></li>
+            <li><strong>Airdrop Vending Machine now available in Battle Royale.</strong></li>
+            <li><strong>New Weapon - Treatment Sniper now available in Battle Royale.</strong></li>
+            <li><strong>Weapon Stats adjustments.</strong></li>
+            <li><strong>Character Balancing adjustments.</strong></li>
+            <li><strong>Replay system available for Battle Royale and Clash Squad.</strong></li>
+            <li><strong>Players can now customize the amount of items to drop from bag.</strong></li>
           </ol>
         </p>
       </div>
