--- a/Minecraft.html
+++ b/Minecraft.html
@@ -15,7 +15,7 @@
       <a class="navbar-brand"><img src="Logo.png" id="logo"> <span id="name">Gaming with Arpan and Ayan</span></a>
       <ul class="nav navbar-nav">
         <li class="nav-item">
-          <a href="index" class="nav-link">Home<span class="sr-only">(current)</span></a>
+          <a href="Home" class="nav-link">Home<span class="sr-only">(current)</span></a>
         </li>
           <li class="nav-item">
             <a href="Minecraft" class="nav-link">Minecraft</a>
