--- a/Minecraft.html
+++ b/Minecraft.html
@@ -6,29 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css" integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd" crossorigin="anonymous">
     <link id="favicon" rel="shortcut icon" sizes="180x180" href="Logo.png" type="image/png"/>
-    <title>Minecraft | Gaming with Arpan and Ayan</title>
+    <title>Gaming with Arpan and Ayan</title>
     <link rel="stylesheet" href="style.css">
+    <script src="jquery.min.js"></script>
+
 </head>
+
 <body>
 
-  <nav class="navbar navbar-light bg-faded navbar-fixed-top">
-      <a class="navbar-brand"><img src="Logo.png" id="logo"> <span id="name">Gaming with Arpan and Ayan</span></a>
-      <ul class="nav navbar-nav">
-        <li class="nav-item">
-          <a href="Home" class="nav-link">Home<span class="sr-only">(current)</span></a>
-        </li>
-          <li class="nav-item">
+    <nav class="navbar navbar-light bg-faded navbar-fixed-top">
+        <a class="navbar-brand"><img src="Logo.png" id="logo"><span id="name">Gaming with Arpan and Ayan</span></a>
+        <ul class="nav navbar-nav">
+          <li class="nav-item" id="display">
+            <a href="Home" class="nav-link">Home<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item" id="display">
             <a href="Minecraft" class="nav-link">Minecraft</a>
-        </li>
-        <li class="nav-item">
-          <a href="Free-Fire" class="nav-link">Free Fire</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://www.youtube.com/channel/UCeKmcV5f2w5mi0XfYkqQjzA" target="-">Visit Channel</a>
-        </li>
-      </ul>
-  </nav>
+          </li>
+          <li class="nav-item" id="display">
+            <a href="Free-Fire" class="nav-link">Free Fire</a>
+          </li>
+          <li class="nav-item" id="display">
+            <a class="nav-link" href="https://www.youtube.com/channel/UCeKmcV5f2w5mi0XfYkqQjzA" target="-">Visit Channel</a>
+          </li>
+          <li class="nav-item">
+            <div class="container2" onclick="myFunction(this)">
+              <div class="bar1"></div>
+              <div class="bar2"></div>
+              <div class="bar3"></div>
+            </div>
+          </li>
+        </ul>
 
+        <div id="toggleitem">
+          <a href="Home" class="nav-item-link">Home<span class="sr-only">(current)</span></a>
+          <a href="Minecraft" class="nav-item-link">Minecraft</a>
+          <a href="Free-Fire" class="nav-item-link">Free Fire</a>
+          <a class="nav-item-link" href="https://www.youtube.com/channel/UCeKmcV5f2w5mi0XfYkqQjzA" target="-">Visit Channel</a>
+        </div>
+    </nav>
+    
   <div id="Minecraft">
       <h1 style="text-align: center;">Minecraft</h1>
       <div class="container">
@@ -211,5 +228,26 @@
     </div>
 
     <script src="script.js"></script>
+    <script type="text/javascript">
+
+      $(document).ready(function(){
+
+        $(".container2").click(function(){
+
+          if($("#toggleitem").css("display") == "none"){
+
+              $("#toggleitem").slideDown("slow");
+
+          } else {
+
+              $("#toggleitem").slideUp("slow");
+
+          }
+
+        });
+
+      })
+
+    </script>
 </body>
 </html>
