--- a/index.html
+++ b/index.html
@@ -8,27 +8,42 @@
     <link id="favicon" rel="shortcut icon" sizes="180x180" href="Logo.png" type="image/png"/>
     <title>Gaming with Arpan and Ayan</title>
     <link rel="stylesheet" href="style.css">
+    <script src="jquery.min.js"></script>
 
 </head>
 
 <body>
 
     <nav class="navbar navbar-light bg-faded navbar-fixed-top">
-        <a class="navbar-brand"><img src="Logo.png" id="logo"> <span id="name">Gaming with Arpan and Ayan</span></a>
+        <a class="navbar-brand"><img src="Logo.png" id="logo"><span id="name">Gaming with Arpan and Ayan</span></a>
         <ul class="nav navbar-nav">
           <li class="nav-item">
-            <a href="Home" class="nav-link">Home<span class="sr-only">(current)</span></a>
+            <a href="Home" class="nav-link" id="display">Home<span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" id="display">
             <a href="Minecraft" class="nav-link">Minecraft</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" id="display">
             <a href="Free-Fire" class="nav-link">Free Fire</a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" id="display">
             <a class="nav-link" href="https://www.youtube.com/channel/UCeKmcV5f2w5mi0XfYkqQjzA" target="-">Visit Channel</a>
           </li>
+          <li class="nav-item">
+            <div class="container2" onclick="myFunction(this)">
+              <div class="bar1"></div>
+              <div class="bar2"></div>
+              <div class="bar3"></div>
+            </div>
+          </li>
         </ul>
+
+        <div id="toggleitem">
+          <a href="Home" class="nav-item-link">Home<span class="sr-only">(current)</span></a>
+          <a href="Minecraft" class="nav-item-link">Minecraft</a>
+          <a href="Free-Fire" class="nav-item-link">Free Fire</a>
+          <a class="nav-item-link" href="https://www.youtube.com/channel/UCeKmcV5f2w5mi0XfYkqQjzA" target="-">Visit Channel</a>
+        </div>
     </nav>
     
     <div id="Home">
@@ -68,12 +83,33 @@
       </div>
     </div>
 
-    <div style="text-align:right;"><strong>Total no. of Visitor</strong>:-<img src="https://counter10.stat.ovh/private/freecounterstat.php?c=abaqdcdl49x8885dhet13m3aesc2s26d" border="0" title="web page counter code" alt="web page counter code"></div>
+    <div style="text-align:right;"><strong>Total no. of Visitor:-</strong><img src="https://counter10.stat.ovh/private/freecounterstat.php?c=abaqdcdl49x8885dhet13m3aesc2s26d" border="0" title="web page counter code" alt="web page counter code"></div>
     <hr>
     <div id="footer">
       © Copyright 2021 Gaming with Arpan and Ayan - All Rights Reserved
     </div>
     
     <script src="script.js"></script>
+    <script type="text/javascript">
+
+      $(document).ready(function(){
+
+        $(".container2").click(function(){
+
+          if($("#toggleitem").css("display") == "none"){
+
+              $("#toggleitem").slideDown("slow");
+
+          } else {
+
+              $("#toggleitem").slideUp("slow");
+
+          }
+
+        });
+
+      })
+
+    </script>
 </body>
 </html>
